feat entidade usuario foi adicionado, metodos que necessitavam da entidade foram refatorados, features de criação de usuario foram adicionados